home button tablet and smaller, userpage

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -157,8 +157,8 @@
                 <i class="material-icons">menu</i>
                 </a>
                 {{! End of test Search }}
-
-                <a href="#" class="brand-logo"><i class="fas fa-tshirt"></i>My Closet</a>
+                <a href="./" class="show-on-small hide-on-large-only"></i>Home</a>
+                <a href="./" class="brand-logo hide-on-small-only"><i class="fas fa-tshirt"></i>My Closet</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="/">Home</a></li>
                     <li><a href="#">Services</a></li>
