--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,8 +40,11 @@
   <!--<div class="parallax-container center valign-wrapper">
     <div class="container">
       <div class="row"> -->
-  <a class="home-button waves-effect waves-light btn-large yellow darken-2 lighten-2" href="userhome"><i class="material-icons">search</i></a>
-  <a class="add-button waves-effect waves-light btn-large yellow darken-2 lighten-2 modal-trigger" href="#add-item-modal">Add Item</a>
+  <!-- Button Container -->      
+  <div class="button-container">
+    <a class="home-button waves-effect waves-light btn-large yellow darken-2 lighten-2" href="userhome"><i class="material-icons">search</i></a>
+    <a class="add-button waves-effect waves-light btn-large yellow darken-2 lighten-2 modal-trigger" href="#add-item-modal">Add Item</a>
+  </div>
   <div class="carousel carousel-slider center" data-indicators="true">
     <div class="container">
       <div class="carousel-fixed-item center">      
@@ -53,7 +56,7 @@
           <br>
           <br>
           <br> -->
-          <h1 class="white-text overlay center-align">WELCOME MY CLOSET</h1>
+          <h1 class="white-text overlay center-align">WELCOME TO MY CLOSET</h1>
           <div id="add-item-modal" class="modal">
             <div class="modal-content">
               <h4>Add An Item</h4>
