--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -114,7 +114,7 @@
                           <div class="file-field input-field">
                             <div class="waves-effect waves-light btn yellow darken-2">
                               <span>Photo</span>
-                              <input type="file" multiple>
+                              <input type="file" name="file">
                             </div>
                             <div class="file-path-wrapper">
                               <input id="img-url" class="file-path validate" type="text" placeholder="Upload a photo of your item">
