--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -32,15 +32,15 @@
                                                     </ul>
                                                 </div>
                                             </li>
-                                            <li>
+                                            <li id="mens-dd">
                                                 <a class="collapsible-header">Men<i class="material-icons right">arrow_drop_down</i></a>
                                                 <div class="collapsible-body">
                                                     <ul class="collapsible">
-                                                        <li>
-                                                        <a href="#!" id="menShirts">&emsp;Shirts</a>
+                                                        <li id="menShirts">
+                                                        <a href="/userhome/mens-shirts" >&emsp;Shirts</a>
                                                         </li>
-                                                        <li>
-                                                        <a href="#!" id="menPants">&emsp;Pants</a>
+                                                        <li id="menPants">
+                                                        <a href="#!" >&emsp;Pants</a>
                                                         </li>
                                                         <li>
                                                         <a href="#!" id="menShoes">&emsp;Shoes</a>
