--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -42,6 +42,10 @@ h1 {
 .carousel-fixed-item {
   top: 300px;
 }
+#user-name {
+  width: 50%;
+  text-align: center;
+}
 #submit-msg {
   margin-top: 10px;
   color: black;
