--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,9 +29,9 @@ h1 {
   left: 0;
   right: 0;
   justify-content: center;
-  height: 100%;
+  /*height: 100%;*/
   align-items: center;
-  top: 130px;
+  top: 525px;
 }
 .button-container .home-button {
   margin-right: 5px;
