data returns for all items

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -137,12 +137,11 @@
             <div class="col s12">
                 <h5>Search Result</h5>
                 <hr>
-                <div id="search-result">
-
-
-
-
-                </div>   
+                <div id="search-result"></div>
+                <div id="pants-result"></div>
+                <div id="dresses-result"></div>
+                <div id="shoes-result"></div>
+ 
             </div>
         </div> 
         <div class="row">
