add image upload functionality

--- a/views/additems.handlebars
+++ b/views/additems.handlebars
@@ -115,7 +115,7 @@
                       <div class="file-field input-field">
                         <div class="waves-effect waves-light btn yellow darken-2">
                           <span>Photo</span>
-                          <input type="file" type="file">
+                          <input type="file" name="file">
                         </div>
                         <div class="file-path-wrapper">
                           <input id="img-url" class="file-path validate" type="text" placeholder="Upload a photo of your item">
@@ -183,7 +183,7 @@
                       <div class="file-field input-field">
                         <div class="waves-effect waves-light btn yellow darken-2">
                           <span>Photo</span>
-                          <input type="file" type="file">
+                          <input type="file" name="file">
                         </div>
                         <div class="file-path-wrapper">
                           <input id="pants-img-url" class="file-path validate" type="text" placeholder="Upload a photo of your item">
@@ -250,7 +250,7 @@
                       <div class="file-field input-field">
                         <div class="waves-effect waves-light btn yellow darken-2">
                           <span>Photo</span>
-                          <input type="file" type="file">
+                          <input type="file" name="file">
                         </div>
                         <div class="file-path-wrapper">
                           <input id="dress-img-url" class="file-path validate" type="text" placeholder="Upload a photo of your item">
@@ -323,7 +323,7 @@
                       <div class="file-field input-field">
                         <div class="waves-effect waves-light btn yellow darken-2">
                           <span>Photo</span>
-                          <input type="file" type="file">
+                          <input type="file" name="file">
                         </div>
                         <div class="file-path-wrapper">
                           <input id="shoes-img-url" class="file-path validate" type="text" placeholder="Upload a photo of your item">
