added image upload functionality

--- a/views/additems.handlebars
+++ b/views/additems.handlebars
@@ -340,10 +340,10 @@
     </li>
   </ul>
                   <div class="input-field col s12">
-                    <button class="waves-effect waves-light btn yellow darken-2 modal-close" id="close">Close</button>
-                </div>
-            </div>
-          </div>
+                                <button class="waves-effect waves-light btn yellow darken-2 modal-close"
+                                    id="close">Close</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
