--- a/views/additems.handlebars
+++ b/views/additems.handlebars
@@ -124,7 +124,7 @@
                     </form>
                 </div>
                 <div id="submit-div" class="input-field col s12">
-                    <button type="button" value="submit" onclick="submitForm()" class="waves-effect waves-light btn yellow darken-2" id="submit">Submit</button>
+                    <button type="button" value="submit" class="waves-effect waves-light btn yellow darken-2" id="submit">Submit</button>
                 </div>
 
 
