--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -65,7 +65,7 @@
     <!--<div class="parallax">
       <img src="/assets/images/closet.jpeg" alt="closet" class="responsive-img">
     </div> -->
-    <div class="carousel-items">
+    {{!-- <div class="carousel-items">
       <a class="carousel-item">
         <img src="/assets/images/closet2.jpg">
       </a>
@@ -78,7 +78,7 @@
       <a class="carousel-item">
         <img src="/assets/images/suits.jpg">
       </a>
-    </div>
+    </div> --}}
   </div>  
 </main>
 <!-- Footer -->
