non-functioning edit, fully wide carousel working

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -136,6 +136,40 @@
         <div class="row">
             <div class="col s12">
                 <h5>Search Result</h5>
+                
+
+
+
+
+
+
+
+
+    <div id="modal2" class="modal">
+        <div class="modal-content">
+            <h4>Stuff</h4>
+            <div class="row">
+                <div class="input-field col s6">
+                    <select class="user-change" id="q1">
+                      <option value="" disabled selected>Size</option>
+                      <option value="small">small</option>
+                      <option value="medium">medium</option>
+                      <option value="large">large</option>
+                      <option value="xlarge">xlarge</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="update-submit" class="modal-close btn waves-effect waves-yellow darken-2 btn-flat" type="submit" name="action">
+                <a href="#" class="modal-close waves-effect waves-yellow darken-2 btn-flat">Update Item</a>
+            </button>
+        </div>
+    </div>
+
+
+
+
                 <hr>
                 <div id="search-result"></div>
                 <div id="pants-result"></div>
