--- a/views/additems.handlebars
+++ b/views/additems.handlebars
@@ -101,7 +101,7 @@
                 <div class="input-field col s6">
                     <select class="user-input" id="q5">
                       <option value="" disabled selected>Suitable for:</option>
-                      <option value="gender-n">Gender Neutral</option>
+                      <option value="gender-neutral">Gender Neutral</option>
                       <option value="female">Female</option>
                       <option value="male">Male</option>
                     </select>
@@ -169,7 +169,7 @@
                 <div class="input-field col s6">
                     <select class="pants-input" id="pq5">
                       <option value="" disabled selected>Suitable for:</option>
-                      <option value="gender-n">Gender Neutral</option>
+                      <option value="gender-neutral">Gender Neutral</option>
                       <option value="female">Female</option>
                       <option value="male">Male</option>
                     </select>
@@ -236,7 +236,7 @@
                 <div class="input-field col s6">
                     <select class="dress-input" id="dq5">
                       <option value="" disabled selected>Suitable for:</option>
-                      <option value="gender-n">Gender Neutral</option>
+                      <option value="gender-neutral">Gender Neutral</option>
                       <option value="female">Female</option>
                       <option value="male">Male</option>
                     </select>
