edit should be price only for the user

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -150,13 +150,8 @@
             <h4>Stuff</h4>
             <div class="row">
                 <div class="input-field col s6">
-                    <select class="user-change" id="q1">
-                      <option value="" disabled selected>Size</option>
-                      <option value="small">small</option>
-                      <option value="medium">medium</option>
-                      <option value="large">large</option>
-                      <option value="xlarge">xlarge</option>
-                    </select>
+                    <input class="change-input" placeholder="$5.00" id="change-price" type="text" class="validate">
+                    <label for="change-price" id="change-price-label">Price</label>
                 </div>
             </div>
         </div>
