hard-coded image placeholders

--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -37,7 +37,7 @@
                                                 <div class="collapsible-body">
                                                     <ul class="collapsible">
                                                         <li id="menShirts">
-                                                        <a href="/userhome/mens-shirts" >&emsp;Shirts</a>
+                                                        <a href="#!" >&emsp;Shirts</a>
                                                         </li>
                                                         <li id="menPants">
                                                         <a href="#!" >&emsp;Pants</a>
@@ -52,17 +52,17 @@
                                                 <a class="collapsible-header">Women<i class="material-icons right">arrow_drop_down</i></a>
                                                 <div class="collapsible-body">
                                                     <ul class="collapsible">
-                                                       <li>
+                                                        <li>
                                                         <a href="#!" id="womenShirt">&emsp;Shirts</a>
                                                         </li>
                                                         <li>
                                                         <a href="#!" id="womenPants">&emsp;Pants</a>
                                                         </li>
                                                         <li>
-                                                        <a href="#!" id="womenDress">&emsp;Dress!</a>
+                                                        <a href="#!" id="womenDress">&emsp;Dress</a>
                                                         </li>
                                                         <li>
-                                                        <a href="#!" id="womenShoes">&emsp;Shoes!</a>
+                                                        <a href="#!" id="womenShoes">&emsp;Shoes</a>
                                                         </li>
                                                     </ul>
                                                 </div>
