--- a/views/additems.handlebars
+++ b/views/additems.handlebars
@@ -222,8 +222,8 @@
                 <div class="input-field col s6">
                     <select class="dress-input" id="dq3">
                       <option value="" disabled selected>Type</option>
-                      <option value="short-sleeve">dress</option>
-                      <option value="long-sleeve">skirt</option>
+                      <option value="dress">dress</option>
+                      <option value="skirt">skirt</option>
                     </select>
                 </div>
                 <div class="input-field col s6">
