--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -183,18 +183,24 @@
 </main>
 <!-- Footer -->
 <footer class="page-footer black lighten-2">
-<div class="container">
+  <div class="container">
     <div class="row">
-    <div class="col l6 s12"></div>
-    <div class="col l4 offset-l2 s12"> 
+      <div class="col l6 s12"></div>
+      <div class="col l4 offset-l2 s12"> 
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/tjlyttles" target="__blank"><i class="fab fa-github"></i><span class="git-text">TJ L</span></a></li>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/abryant858" target="__blank"><i class="fab fa-github"></i><span class="git-text">Armand B</span></a></li>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/davygallegos" target="__blank"><i class="fab fa-github"></i><span class="git-text">David G</span></a></li>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/Avalineai" target="__blank"><i class="fab fa-github"></i><span class="git-text">Avaline A</span></a></li>
+          </ul>
+      </div>
     </div>
+  </div>
+  <div class="footer-copyright black">
+    <div class="container foot-bottom black center-align">
+      © 2019 Copyright My Closet - All Rights Reserved
     </div>
-</div>
-<div class="footer-copyright">
-    <div class="container foot-bottom center-align">
-    © 2019 Copyright My Closet - All Rights Reserved
-    </div>
-</div>
+  </div>
 </footer>
 <!-- Library Links -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
