--- a/views/userhome.handlebars
+++ b/views/userhome.handlebars
@@ -36,14 +36,14 @@
                                                 <a class="collapsible-header">Men<i class="material-icons right">arrow_drop_down</i></a>
                                                 <div class="collapsible-body">
                                                     <ul class="collapsible">
-                                                        <li id="menShirts">
-                                                        <a href="#!" >&emsp;Shirts</a>
-                                                        </li>
-                                                        <li id="menPants">
-                                                        <a href="#!" >&emsp;Pants</a>
+                                                        <li>
+                                                        <a href="#!" class="menShirtsAnchor" id="menShirts">&emsp;Shirts</a>
                                                         </li>
                                                         <li>
-                                                        <a href="#!" id="menShoes">&emsp;Shoes</a>
+                                                        <a href="#!" class="menPantsAnchor" id="menPants">&emsp;Pants</a>
+                                                        </li>
+                                                        <li>
+                                                        <a href="#!" class="menShoesAnchor" id="menShoes">&emsp;Shoes</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -53,16 +53,16 @@
                                                 <div class="collapsible-body">
                                                     <ul class="collapsible">
                                                         <li>
-                                                        <a href="#!" id="womenShirt">&emsp;Shirts</a>
+                                                        <a href="#!" class="womenShirtsAnchor" id="womenShirt">&emsp;Shirts</a>
                                                         </li>
                                                         <li>
-                                                        <a href="#!" id="womenPants">&emsp;Pants</a>
+                                                        <a href="#!" class="womenPantsAnchor" id="womenPants">&emsp;Pants</a>
                                                         </li>
                                                         <li>
-                                                        <a href="#!" id="womenDress">&emsp;Dress</a>
+                                                        <a href="#!" class="womenDressAnchor" id="womenDress">&emsp;Dress</a>
                                                         </li>
                                                         <li>
-                                                        <a href="#!" id="womenShoes">&emsp;Shoes</a>
+                                                        <a href="#!" class="womenShoesAnchor" id="womenShoes">&emsp;Shoes</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -162,14 +162,13 @@
         </div>
     </div>
 
-
-
-
                 <hr>
+                <div class="results-container">
                 <div id="search-result"></div>
-                <div id="pants-result"></div>
-                <div id="dresses-result"></div>
-                <div id="shoes-result"></div>
+                <div class="result-div" id="pants-result"></div>
+                <div class="result-div" id="dresses-result"></div>
+                <div class="result-div" id="shoes-result"></div>
+                </div>
             </div>
         </div> 
         <div class="row">
